--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,14 +26,14 @@
     -->
     <title>Brian Holden Design & Development</title>
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JJ1STE0HNB"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9NRCC1NMRD"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-JJ1STE0HNB');
+      gtag('config', 'G-9NRCC1NMRD');
     </script>
 
   </head>
