--- a/client/public/index.html
+++ b/client/public/index.html
@@ -27,13 +27,13 @@
     <title>Brian Holden Design & Development</title>
 
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9NRCC1NMRD"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JJ1STE0HNB"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-9NRCC1NMRD');
+      gtag('config', 'G-JJ1STE0HNB');
     </script>
 
   </head>
